# teshi

./: .gitignore  BUILD.md  README.md  README.zh-CN.md  README_DEMO.md  build_exe.py  debug_search_details.py  examine_testcases.py  main.py  pyproject.toml  requirements.txt  test_fts_fix.py  test_fts_simple.py  test_highlight.py  test_highlight_integration.py  test_parse_fix.py  test_search_fix.py  test_search_verification.py
.github/workflows/: build.yml
controllers/: testcase_controller.py
models/: testcase_model.py
repositories/: testcase_repository.py
scripts/: check_testcase_dir.py
teshi/: main.py
teshi/config/: automate_editor_config.py
teshi/controllers/: automate_controller.py  testcase_controller.py
teshi/managers/: node_lib_manager.py
teshi/models/: jupyter_node_model.py
teshi/repositories/: testcase_repository.py
teshi/services/: git_service.py  node_factory.py  node_registry_service.py
teshi/utils/: bdd_converter.py  excel_parser.py  file_watcher.py  graph_execute_controller.py  graph_util.py  ipynb_file_util.py  keyword_highlighter.py  logger.py  project_manager.py  resource_path.py  str_util.py  testcase_index_manager.py  time_util.py  tree_utils.py  workspace_manager.py  (+1 more)
tests/: debug_fts5_correct.py  mock_server.py  test_and_logic_debug.py  test_and_logic_search.py  test_automate_controller.py  test_chinese_search.py  test_index_manager.py  test_mixed_search.py  test_project_search.py  test_space_search.py  test_space_search_detailed.py
utils/: excel_parser.py  project_manager.py
views/: main_window.py  project_select_page.py
(+35 files in other folders)
