[project]
name = "teshi"
version = "0.1.0"
description = "Teshi is a program built for testers"
authors = [
    {name = "lilinfang",email = "lilinfangrelax@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
