[tool.poetry]
name = "teshi"
version = "0.1.0"
description = "Teshi is a program built for testers"
authors = ["lilinfang <lilinfangrelax@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pyside6 = ">=6.10.0,<7.0.0"
pytest = ">=8.4.2,<9.0.0"
xlrd = ">=2.0.2,<3.0.0"
markdown = ">=3.10,<4.0"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.0.0,<7.0.0"
pillow = ">=10.0.0,<11.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
